fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -153,8 +153,8 @@ a {
     display: flex;
 	gap: 0;
 	margin: 0;
-	padding-right: 0;
-	padding-left: 0;
+	padding-right: 1em;
+	padding-left: 1em;
 	padding-block: 1em;
 	border-radius: 50px;
 	transition: background 0.3s ease-in-out;
